--- a/AdministratorApp/AdministratorApp/AdministratorApp.csproj
+++ b/AdministratorApp/AdministratorApp/AdministratorApp.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Model\Address.cs" />
     <Compile Include="Model\Order.cs" />
     <Compile Include="Model\OrderList.cs" />
+    <Compile Include="Client\AdmClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestClass.cs" />
