--- a/AdministratorApp/AdministratorApp/AdministratorApp.csproj
+++ b/AdministratorApp/AdministratorApp/AdministratorApp.csproj
@@ -74,11 +74,11 @@
     <Compile Include="Model\ClientList.cs" />
     <Compile Include="Model\Order.cs" />
     <Compile Include="Model\OrderList.cs" />
-    <Compile Include="Service\AdministratorService.cs" />
+    <Compile Include="Controller\AdministratorController.cs" />
     <Compile Include="Model\SocketRequest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\IAdministratorService.cs" />
+    <Compile Include="Controller\IAdministratorController.cs" />
     <Compile Include="ShowRowData.cs">
       <SubType>Form</SubType>
     </Compile>
