--- a/AdministratorApp/AdministratorApp/AdministratorApp.csproj
+++ b/AdministratorApp/AdministratorApp/AdministratorApp.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\AdministratorApp.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -74,18 +75,17 @@
     <Compile Include="Model\ClientList.cs" />
     <Compile Include="Model\Order.cs" />
     <Compile Include="Model\OrderList.cs" />
-    <Compile Include="Controller\AdministratorController.cs" />
+    <Compile Include="Service\AdministratorService.cs" />
     <Compile Include="Model\SocketRequest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controller\IAdministratorController.cs" />
+    <Compile Include="Service\IAdministratorService.cs" />
     <Compile Include="ShowRowData.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ShowRowData.Designer.cs">
       <DependentUpon>ShowRowData.cs</DependentUpon>
     </Compile>
-    <Compile Include="TestClass.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
